--- a/client/package.json
+++ b/client/package.json
@@ -5,19 +5,23 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "clsx": "^1.1.1",
     "express": "^4.17.1",
     "ganache-cli": "^6.12.2",
     "ganache-core": "^2.13.2",
     "google-maps-react": "^2.0.6",
+    "jspdf": "^2.5.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.2.0",
     "web3": "1.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
